Vital sign fix logic
